--- a/Prototype/index.html
+++ b/Prototype/index.html
@@ -5,30 +5,93 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Page Title Goes Here</title>
+    <title>Creative Kids Home</title>
     <meta name="description" content="Page Description Goes Here">
   </head>
 
-       <!-- The page content goes here -->
+<!--The page content goes here -->
 
-  <body>
-
-    <header>
-      <h1>EFF MY LIFE</h1>
-      <nav></nav>
-    </header>
+<body>
+  <header>
+      <img class= "logo" src=""=>
+      Creative Kidz Kinder Care
+      <nav>
+        <ul class="main-ul">
+          <li>Home</li>
+          <li>About</li>
+          <li>Programs</li>
+          <li>Careers</li>
+          <li>News + Events</li>
+          <li>Enroll</li>
+        </ul>
+      </nav>
+  </header>
 
   <main>
+    <div class="mission">
+        <h1>Get Creative with Us</h1>
+        <h2>Our Mission is You</h2>
+          <p>Creative Kidz Kinder Care takes pride in providing the highest
+            level of care to our families. We have a children-centered
+            designed facility, and all our teachers have gone through
+            professional training. What sets us apart from any other
+            childcare service is that we believe in the creative process,
+            and how that can help your child learn.</p>
+    </div>
 
 
+    <div class="grow">
+      <img src="https://www.washingtonpost.com/resizer/BFLegdSC83UHvxD_rBhiyM0RJjI=/480x0/arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/XYT6DCE7XAI6PMVHXRYLN6MARE.jpg">
+      <h2>Grow</h2>
+        <p>At Creative Kidz, we follow the Creative Curriculum, which is
+          the nation’s leading preschool and childcare curriculum. <br/><a href="https://www.google.com">Learn more about our programs</a></p>
+    </div>
 
 
+    <div class="engage">
+      <img src="https://www.washingtonpost.com/resizer/BFLegdSC83UHvxD_rBhiyM0RJjI=/480x0/arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/XYT6DCE7XAI6PMVHXRYLN6MARE.jpg">
+      <h2>Engage</h2>
+        <p>Kids love spending time here. Young minds are encouraged
+          and nurtured with a variety of enjoyable and interesting programs
+          and activities. <br/><a href="https://www.google.com">See how we have fun</a></p>
+    </div>
 
 
-
-
-
+    <div class="testimonials">
+        <h1>Only the Best</h1>
+        <h2>See what our Parents have to Say</h2>
+        <ul>
+          <li>Connor started Creative Kidz Learning Center on Monday…and so far,
+            he couldn’t be happier (or healthier)!</br>—Karen</li>
+          <li>Special Thanks to Jonathan and Frank Smith for helping to make my
+            babies’ birthday party a blast! Would definitely recommend Creative
+            Kidz Learning Center as a place to celebrate your child’s birthday!
+            Lots of fun</br>—Abby</li>
+          <li>We had our daughter in a private sitters care for a year.
+            We had to make a change to a facility because our needs changed.
+            Our little one loves it so much and the staff made the transition
+            so easy for us. She has learned so much in the last year we
+            couldn’t be happier. You know a good daycare when you walk in
+            and hear children laughing and having a great time.</br>—Dan</li>
+        </ul>
+    </div>
   </main>
+
+
+  <footer>
+    <h4>Creative Kidz Kinder Care</h4>
+    <ul class="footer">
+      <li>134 Portage Rd.<br/>Kent, OH 44240</li>
+      <li>About</li>
+      <li>Programs</li>
+      <li>Careers<li>
+      <li>News + Events</li>
+      <li>Enroll</li>
+    </ul>
+    <ul>
+      <li>Facebook</li>
+    </li><a href="mailto:CreativeKidz@gmail.com">Email Us</a></li>
+  </footer>
 
 
 
