--- a/Prototype/About.html
+++ b/Prototype/About.html
@@ -58,7 +58,7 @@
 
 
            <div class="leader1">
-                    <img src="https://media.gannett-cdn.com/29906170001/29906170001_5780351010001_5780346124001-vs.jpg?pubId=29906170001&quality=10">
+                    <img src="Images/About/Brittany.jpg">
                      <h3>Brittany Robertson <span>Chief Operations Officer</span></h3>
                      <p>Brittany is Creative Kidz Chief Operations Officer. She began her career
                        in 2007 as a pre-K Teacher. She left to obtain her Bachelor's degree in Early
@@ -146,7 +146,7 @@
 
 
 
-
-      <link href="style.css" rel="stylesheet" type="text/css" media="screen" /> <!-- Add your stylesheet here, before the closing HTML tag -->
+      <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans|Poppins:700" rel="stylesheet">
+      <link href="Styles/CKstyle.css" rel="stylesheet" type="text/css" media="screen" /> <!-- Add your stylesheet here, before the closing HTML tag -->
   </body>
 </html>
