--- a/Prototype/Programs.html
+++ b/Prototype/Programs.html
@@ -91,6 +91,7 @@
 
 
 
-      <link href="style.css" rel="stylesheet" type="text/css" media="screen" /> <!-- Add your stylesheet here, before the closing HTML tag -->
+      <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans|Poppins:700" rel="stylesheet">
+      <link href="Styles/CKstyle.css" rel="stylesheet" type="text/css" media="screen" /> <!-- Add your stylesheet here, before the closing HTML tag -->
   </body>
 </html>
