Made changes to CSS

--- a/Prototype/About.html
+++ b/Prototype/About.html
@@ -12,7 +12,7 @@
 <!-- The page content goes here -->
 
        <header>
-               <img class="logo" src=>
+               <img class="logo" src="Images/Header/CK_logo.svg">
                <h1>Creative Kidz Kinder Care</h1>
                <nav>
                  <ul class="main-ul">
@@ -76,7 +76,7 @@
 
 
          <div class="leader2">
-                    <img src="https://media.gannett-cdn.com/29906170001/29906170001_5780351010001_5780346124001-vs.jpg?pubId=29906170001&quality=10">
+                    <img src="Images/About/Megan.jpeg">
                     <h3>Megan Drake <span>Area Director</span></h3>
                     <p>Megan is the Area Director for our learning facilities. She began her career with
                       us in 2011. She has her Masters in the Art of Teaching, as well as Bachelor's Degree
@@ -88,7 +88,7 @@
 
 
          <div class="leader3">
-                  <img src="https://media.gannett-cdn.com/29906170001/29906170001_5780351010001_5780346124001-vs.jpg?pubId=29906170001&quality=10">
+                  <img src="Images/About/Kathy.jpeg">
                   <h3>Kathy Clemson <span>Toddler Activity Director</span></h3>
                   <p>Hello! I'm Teacher Kathy, and I'm the Co-Teacher for the teaching center. I started
                     as a floater/substitute in February of 2012, and am very excited to now be able to
@@ -102,7 +102,7 @@
 
 
          <div class="leader4">
-                  <img src="https://media.gannett-cdn.com/29906170001/29906170001_5780351010001_5780346124001-vs.jpg?pubId=29906170001&quality=10">
+                  <img src="Images/About/Kaleigh.jpeg">
                   <h3>Kaleigh Stewart <span>Infant Activity Director</span></h3>
                   <p>Teacher Kaleigh is infant aide. She moved to Ohio from Southern California and is
                     loving it. Kaleigh started working in preschools and daycares when she was in high
