--- a/Prototype/Programs.html
+++ b/Prototype/Programs.html
@@ -7,10 +7,26 @@
     <title>Creative Kids Programs</title>
     <meta name="description" content="Page Description Goes Here">
   </head>
-  <body>
+
 
 
  <!-- The page content goes here -->
+
+  <body>
+ <header>
+     <img class= "logo" src="Images/Header/CK_logo.svg"=>
+     Creative Kidz Kinder Care
+     <nav>
+       <ul class="main-ul">
+         <li>Home</li>
+         <li>About</li>
+         <li>Programs</li>
+         <li>Careers</li>
+         <li>News + Events</li>
+         <li>Enroll</li>
+       </ul>
+     </nav>
+ </header>
 
 
 <main>
