--- a/Prototype/index.html
+++ b/Prototype/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-      <img class= "logo" src=""=>
+      <img class= "logo" src="Images/Header/CK_logo.svg"=>
       Creative Kidz Kinder Care
       <nav>
         <ul class="main-ul">
