CSS Changes Made and Images Added to Pages

--- a/Prototype/About.html
+++ b/Prototype/About.html
@@ -88,7 +88,7 @@
 
 
          <div class="leader3">
-                  <img src="Images/About/Kathy.jpeg">
+                  <img src="Images/About/Kathy.jpg">
                   <h3>Kathy Clemson <span>Toddler Activity Director</span></h3>
                   <p>Hello! I'm Teacher Kathy, and I'm the Co-Teacher for the teaching center. I started
                     as a floater/substitute in February of 2012, and am very excited to now be able to
@@ -102,7 +102,7 @@
 
 
          <div class="leader4">
-                  <img src="Images/About/Kaleigh.jpeg">
+                  <img src="Images/About/Kaleigh.jpg">
                   <h3>Kaleigh Stewart <span>Infant Activity Director</span></h3>
                   <p>Teacher Kaleigh is infant aide. She moved to Ohio from Southern California and is
                     loving it. Kaleigh started working in preschools and daycares when she was in high
