--- a/Prototype/index.html
+++ b/Prototype/index.html
@@ -41,7 +41,7 @@
 
 
     <div class="grow">
-      <img src="https://www.washingtonpost.com/resizer/BFLegdSC83UHvxD_rBhiyM0RJjI=/480x0/arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/XYT6DCE7XAI6PMVHXRYLN6MARE.jpg">
+      <img src="Images/Home/Grow.jpg">
       <h2>Grow</h2>
         <p>At Creative Kidz, we follow the Creative Curriculum, which is
           the nation’s leading preschool and childcare curriculum. <br/><a href="https://www.google.com">Learn more about our programs</a></p>
@@ -49,7 +49,7 @@
 
 
     <div class="engage">
-      <img src="https://www.washingtonpost.com/resizer/BFLegdSC83UHvxD_rBhiyM0RJjI=/480x0/arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/XYT6DCE7XAI6PMVHXRYLN6MARE.jpg">
+      <img src="Images/Home/Engage.jpg">
       <h2>Engage</h2>
         <p>Kids love spending time here. Young minds are encouraged
           and nurtured with a variety of enjoyable and interesting programs
