--- a/Prototype/About.html
+++ b/Prototype/About.html
@@ -133,11 +133,11 @@
                <li>134 Portage Rd.<br/>Kent, OH 44240</li>
                <li>About</li>
                <li>Programs</li>
-               <li>Careers<li>
+               <li>Careers</li>
                <li>News + Events</li>
                <li>Enroll</li>
              </ul>
-             <ul>
+             <ul class="social">
                <li>Facebook</li>
              </li><a href="mailto:CreativeKidz@gmail.com">Email Us</a></li>
            </footer>
