--- a/Prototype/About.html
+++ b/Prototype/About.html
@@ -9,22 +9,44 @@
   </head>
   <body>
 
+
+
+<!-- Top Navigation Menu -->
+<div class="topnav">
+  <a href="index.html" class="active"><img src="Images/Header/CK_Logo.svg"></a>
+  <!-- Navigation links (hidden by default) -->
+  <div id="myLinks">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="About.html">About</a></li>
+      <li><a href="Programs.html">Programs</a></li>
+      <li><a href="none">Careers</a></li>
+      <li><a href="none">News + Events</a></li>
+      <li><a href="none">Enroll</a></li>
+  </ul>
+  </div>
+
+  <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+  <a class="icon" onclick="myFunction()">O</a>
+
+</div>
+
+<script>
+/* Toggle between showing and hiding the navigation menu links when the user clicks on the hamburger menu / bar icon */
+function myFunction() {
+  var x = document.getElementById("myLinks");
+  if (x.style.display === "block") {
+    x.style.display = "none";
+  } else {
+    x.style.display = "block";
+  }
+}
+</script>
+
+
+
 <!-- The page content goes here -->
 
-       <header>
-               <img class="logo" src="Images/Header/CK_logo.svg">
-               <h1>Creative Kidz Kinder Care</h1>
-               <nav>
-                 <ul class="main-ul">
-                   <li>Home</li>
-                   <li>About</li>
-                   <li>Programs</li>
-                   <li>Careers</li>
-                   <li>News + Events</li>
-                   <li>Enroll</li>
-                 </ul>
-               </nav>
-             </header>
 
   <main>
                  <div class="location">
@@ -115,12 +137,13 @@
 
 
        <div class="contact">
-         <h2>Contact Us + Location</h2>
+         <h2>Location, Hours + Contact</h2>
        <h4>Create Kidz KinderCare Center</h4>
        <ul>
          <li>134 Portage Road<br/>Kent, OH 44240</li>
          <li>Phone: 330-672-3000</li>
          <li>Fax: 330-672-3001</li>
+         <li><strong>Hours: </strong>Mon-Fri: 6:30am-6:00pm
          <li>Email: <a href="mailto:contact@creativekidz.com">contact@creativekidz.com</a></li>
        </div>
   </main>
