--- a/Prototype/About.html
+++ b/Prototype/About.html
@@ -7,6 +7,8 @@
     <title>Creative Kidz About</title>
     <meta name="description" content="Page Description Goes Here">
   </head>
+
+
   <body>
 
 
@@ -20,14 +22,14 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="About.html">About</a></li>
       <li><a href="Programs.html">Programs</a></li>
-      <li><a href="none">Careers</a></li>
+      <li><a href="Careers.html">Careers</a></li>
       <li><a href="none">News + Events</a></li>
       <li><a href="none">Enroll</a></li>
   </ul>
   </div>
 
   <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
-  <a class="icon" onclick="myFunction()">O</a>
+  <a class="icon" onclick="myFunction()"><img src="Images/Header/CK_Hamburger.svg"></a>
 
 </div>
 
@@ -141,28 +143,30 @@ function myFunction() {
        <h4>Create Kidz KinderCare Center</h4>
        <ul>
          <li>134 Portage Road<br/>Kent, OH 44240</li>
-         <li>Phone: 330-672-3000</li>
-         <li>Fax: 330-672-3001</li>
+         <li><strong>Phone: </strong>330-672-3000</li>
+         <li><strong>Fax: </strong>330-672-3001</li>
          <li><strong>Hours: </strong>Mon-Fri: 6:30am-6:00pm
-         <li>Email: <a href="mailto:contact@creativekidz.com">contact@creativekidz.com</a></li>
+         <li><strong>Email: </strong><a href="mailto:contact@creativekidz.com">contact@creativekidz.com</a></li>
        </div>
   </main>
 
 
 
            <footer>
-             <h4>Creative Kidz Kinder Care</h4>
-             <ul class="footer">
+
+          <div class="footer">
+             <a href="index.html"><img src="Images/Footer/CK_Footer_Logo.svg" /></a>
+             <ul>
                <li>134 Portage Rd.<br/>Kent, OH 44240</li>
-               <li>About</li>
-               <li>Programs</li>
-               <li>Careers</li>
-               <li>News + Events</li>
-               <li>Enroll</li>
-             </ul>
-             <ul class="social">
-               <li>Facebook</li>
-             </li><a href="mailto:CreativeKidz@gmail.com">Email Us</a></li>
+               <li><a href="About.html">About</a></li>
+               <li><a href="Programs.html" >Programs</a></li>
+               <li><a href="Careers.html" >Careers</a></li>
+               <li><a href="" >News + Events</a></li>
+               <li><a href="" >Enroll</a></li>
+               <li><a href="https://www.facebook.com" />Facebook</a></li>
+                <li><a href="mailto:CreativeKidz@gmail.com">Email Us</a></li>
+           </div>
+
            </footer>
 
 
