--- a/Prototype/Programs.html
+++ b/Prototype/Programs.html
@@ -9,24 +9,46 @@
   </head>
 
 
-
- <!-- The page content goes here -->
-
   <body>
- <header>
-     <img class= "logo" src="Images/Header/CK_logo.svg"=>
-     Creative Kidz Kinder Care
-     <nav>
-       <ul class="main-ul">
-         <li>Home</li>
-         <li>About</li>
-         <li>Programs</li>
-         <li>Careers</li>
-         <li>News + Events</li>
-         <li>Enroll</li>
-       </ul>
-     </nav>
- </header>
+
+
+<!--.......... Top Navigation Menu..........-->
+
+
+    <div class="topnav">
+      <a href="index.html" class="active"><img src="Images/Header/CK_Logo.svg"></a>
+      <!-- Navigation links (hidden by default) -->
+      <div id="myLinks">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="About.html">About</a></li>
+          <li><a href="Programs.html">Programs</a></li>
+          <li><a href="Careers.html">Careers</a></li>
+          <li><a href="none">News + Events</a></li>
+          <li><a href="none">Enroll</a></li>
+      </ul>
+      </div>
+
+      <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+      <a class="icon" onclick="myFunction()"><img src="Images/Header/CK_Hamburger.svg"></a>
+
+    </div>
+
+    <script>
+    /* Toggle between showing and hiding the navigation menu links when the user clicks on the hamburger menu / bar icon */
+    function myFunction() {
+      var x = document.getElementById("myLinks");
+      if (x.style.display === "block") {
+        x.style.display = "none";
+      } else {
+        x.style.display = "block";
+      }
+    }
+    </script>
+
+
+    <!-- The page content goes here -->
+
 
 
 <main>
@@ -95,19 +117,22 @@
 
 </main>
 
+
 <footer>
-  <h4>Creative Kidz Kinder Care</h4>
-  <ul class="footer">
+
+<div class="footer">
+  <a href="index.html"><img src="Images/Footer/CK_Footer_Logo.svg" /></a>
+  <ul>
     <li>134 Portage Rd.<br/>Kent, OH 44240</li>
-    <li>About</li>
-    <li>Programs</li>
-    <li>Careers</li>
-    <li>News + Events</li>
-    <li>Enroll</li>
-  </ul>
-  <ul class="social">
-    <li>Facebook</li>
-  </li><a href="mailto:CreativeKidz@gmail.com">Email Us</a></li>
+    <li><a href="About.html">About</a></li>
+    <li><a href="Programs.html" >Programs</a></li>
+    <li><a href="Careers.html" >Careers</a></li>
+    <li><a href="" >News + Events</a></li>
+    <li><a href="" >Enroll</a></li>
+    <li><a href="https://www.facebook.com" />Facebook</a></li>
+     <li><a href="mailto:CreativeKidz@gmail.com">Email Us</a></li>
+</div>
+
 </footer>
 
 
