--- a/Prototype/index.html
+++ b/Prototype/index.html
@@ -9,27 +9,48 @@
     <meta name="description" content="Page Description Goes Here">
   </head>
 
-<!--TOP NAVIGATION -->
 
-<body>
-  <header>
-      <img class= "logo" src="Images/Header/CK_logo.svg"=>
-      Creative Kidz Kinder Care
-      <nav>
-        <ul class="main-ul">
-          <li>Home</li>
-          <li>About</li>
-          <li>Programs</li>
-          <li>Careers</li>
-          <li>News + Events</li>
-          <li>Enroll</li>
-        </ul>
-      </nav>
-  </header>
+<!--..........TOP NAVIGATION ...........-->
+
+
+<!-- Top Navigation Menu -->
+<div class="topnav">
+  <a href="index.html" class="active"><img src="Images/Header/CK_Logo.svg"></a>
+  <!-- Navigation links (hidden by default) -->
+  <div id="myLinks">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="About.html">About</a></li>
+      <li><a href="Programs.html">Programs</a></li>
+      <li><a href="Careers.html">Careers</a></li>
+      <li><a href="none">News + Events</a></li>
+      <li><a href="none">Enroll</a></li>
+  </ul>
+  </div>
+
+  <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+  <a class="icon" onclick="myFunction()"><img src="Images/Header/CK_Hamburger.svg"></a>
+
+</div>
+
+<script>
+/* Toggle between showing and hiding the navigation menu links when the user clicks on the hamburger menu / bar icon */
+function myFunction() {
+  var x = document.getElementById("myLinks");
+  if (x.style.display === "block") {
+    x.style.display = "none";
+  } else {
+    x.style.display = "block";
+  }
+}
+</script>
+
+
 
 
 
 <!--..........SLIDER.........-->
+
 <div class="home-slider">
 <img class="mySlides" src="Images/Home/Slider1.png" style="width:100%">
 <img class="mySlides" src="Images/Home/Slider2.png" style="width:100%">
@@ -49,7 +70,7 @@ function carousel() {
     slideIndex++;
     if (slideIndex > x.length) {slideIndex = 1}
     x[slideIndex-1].style.display = "block";
-    setTimeout(carousel, 3500); // Change image every 3 seconds
+    setTimeout(carousel, 3000); // Change image every 3 seconds
 }
 </script>
 
@@ -76,7 +97,7 @@ function carousel() {
       <img src="Images/Home/Grow.png">
       <h2>Grow</h2>
         <p>At Creative Kidz, we follow the Creative Curriculum, which is
-          the nation’s leading preschool and childcare curriculum. <br/><a href="https://www.google.com">Learn more about our programs</a></p>
+          the nation’s leading preschool and childcare curriculum. <br/><a href="Programs.html">Learn more about our programs</a></p>
     </div>
 
 
@@ -85,13 +106,13 @@ function carousel() {
       <h2>Engage</h2>
         <p>Kids love spending time here. Young minds are encouraged
           and nurtured with a variety of enjoyable and interesting programs
-          and activities. <br/><a href="https://www.google.com">See how we have fun</a></p>
+          and activities. <br/><a href="Home.html">See how we have fun</a></p>
     </div>
 
 
     <div class="testimonials">
         <h1>Only the Best</h1>
-        <h2>See what our Parents have to Say</h2>
+        <h2>Listen to our Parents</h2>
         <ul>
           <li><strong>Connor started Creative Kidz</strong> Learning Center on Monday…and so far,
             he couldn’t be happier (or healthier)!</br><span>Karen</span></li>
@@ -111,18 +132,20 @@ function carousel() {
 
 
   <footer>
-    <h4>Creative Kidz Kinder Care</h4>
-    <ul class="footer">
+
+ <div class="footer">
+    <a href="index.html"><img src="Images/Footer/CK_Footer_Logo.svg" /></a>
+    <ul>
       <li>134 Portage Rd.<br/>Kent, OH 44240</li>
-      <li>About</li>
-      <li>Programs</li>
-      <li>Careers</li>
-      <li>News + Events</li>
-      <li>Enroll</li>
-    </ul>
-    <ul class="social">
-      <li>Facebook</li>
-    </li><a href="mailto:CreativeKidz@gmail.com">Email Us</a></li>
+      <li><a href="About.html">About</a></li>
+      <li><a href="Programs.html" >Programs</a></li>
+      <li><a href="Careers.html" >Careers</a></li>
+      <li><a href="" >News + Events</a></li>
+      <li><a href="" >Enroll</a></li>
+      <li><a href="https://www.facebook.com" />Facebook</a></li>
+       <li><a href="mailto:CreativeKidz@gmail.com">Email Us</a></li>
+  </div>
+
   </footer>
 
 
